deployment/deployment-mywebapp.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mywebapp
  namespace: mywebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebapp
  template:
    metadata:
      labels:
        app: mywebapp
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registrypullsecret
        - name: registrypullsecret
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: mywebapp
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: datavolume
              mountPath: /data
          terminationMessagePolicy: File
          image: 's001elk2.konsalt.info:5555/my-nodejs-app'
        - name: elastic-filebeat
          image: 's001elk2.konsalt.info:5555/filebeat:1.0'
          command: ["filebeat", "-c", "/usr/share/filebeat/filebeat.yml"]
          volumeMounts:
            - name: datavolume
              mountPath: /data
      volumes:
        - name: env
          emptyDir: {}
        - name: datavolume
          persistentVolumeClaim:
            claimName: mywebdata
