deployment/mywebapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mywebapp-route
  namespace: mywebapp
spec:
  host: mywebapp.apps.ocpkobil.konsalt.info
  to:
    kind: Service
    name: mywebapp-service
  port:
    targetPort: 3000
